--- a/new/src/App.css
+++ b/new/src/App.css
@@ -245,6 +245,17 @@ justify-content: center; */
   background-color: violet;
 }
 
+
+/*------------------------------------------------------- fifth section start*/
+
+
+.fifth-section{
+  background-color: var(--kbd-bg, #1b1e24);
+
+}
+/*------------------------------------------------------- fifth section end*/
+
+
 /*------------------------------------------------------- footer section start */
 
 .footer {
@@ -253,6 +264,7 @@ justify-content: center; */
   /* background-color: yellow; */
   display: flex;
   justify-content: space-around;
+  background-color: var(--kbd-bg, #1b1e24);
   /* gap: 120px; */
   /* background-color: #1b1e24; */
 }
